// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserController DELETE /user/:id 1`] = `
Object {
  "email": "ben@twofer.co",
  "id": undefined,
  "name": "ben",
}
`;

exports[`UserController GET /user/:id 1`] = `
Object {
  "email": "ben@twofer.co",
  "id": 1,
  "name": "ben",
}
`;

exports[`UserController GET /users 1`] = `
Array [
  Object {
    "email": "ben@twofer.co",
    "id": 1,
    "name": "ben",
  },
  Object {
    "email": "liam@twofer.co",
    "id": 2,
    "name": "liam",
  },
]
`;
